syntax = "proto2";
package gameinfo;

option go_package = "fileserver/fileinfo";

message BotConstants {
    enum BotFileType {
        BOT_FILE_TYPE_SINGLE = 1;  //
        BOT_FILE_TYPE_MULTIPART = 2; //
    }
}

message FileUploadResponse {
    optional string down_key = 1; //
}

message FileUploadBeginRequest {
    optional uint64 file_size = 1; //
}

message FileUploadBeginResponse {
    optional string upload_ctx = 1; //refer: UploadIdCtx
    optional uint32 block_size = 2; //
}

message FileUploadPartResponse {

}

message FileUploadEndRequest {
    optional string upload_ctx = 1; //
    optional string file_name = 2; //
    optional string hash = 3; //
}

message FileUploadEndResponse {
    optional string down_key = 1; //
}

message UploadIdCtx {
    optional uint64 file_size = 1; //
    optional string upload_id = 2; //
    optional uint32 block_size = 3; //
    optional string file_key = 4; //
}

message GetFileMetaRequest {
    repeated uint64 down_key = 1; //
}

message FileItem {
    optional string file_name = 1; //
    optional string hash = 2; //
    optional uint64 file_size = 3; //
    optional uint64 create_time = 4; //
    optional uint64 down_key = 5; //
    optional bool exist = 6; //
}

message GetFileMetaResponse {
    repeated FileItem list = 1; //
}

message BotFileExtra {
    optional int64 chat_id = 1; //
    optional int32 file_type = 2; //
    optional int64 block_size = 3; //
    optional int64 file_size = 4; //
}

message BotUploadContext {
    optional int64 file_size = 1; //
    optional int64 block_size = 2; //
    repeated string blocks = 3; //
}